--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "manifest_version": 2,
     "description": "Allows you to pin things to your pinboard",
-    "homepage_url": "https://github.com/CSCE242/pinboard",
+    "homepage_url": "http://localhost:8080",
     "icons": {
 	"16": "icons/icon16.png",
 	"48": "icons/icon48.png",
